# SILVAN

./: .gitignore  CMakeLists.txt  graphs_experiments.csv
.specstory/history/: 2025-11-21_12-06Z-failed-to-compile-project.md  2025-11-24_06-19Z-configure-vscode-for-c++-definitions.md  2025-11-24_12-52Z-understanding-source-code-file-functionalities.md  2025-12-03_06-33Z-modify-script-for-windows-10-compatibility.md  2025-12-03_14-20Z-modify-script-to-output-bc-scores.md  2026-01-30_07-44Z-parameters-union-sample-and-start-factor-in-kadabra-silvan.md
kadabra/: .gitignore
kadabra/src/: Probabilistic.cpp
scripts/: Email-Enron_bc_scores.mat  bc_scores.txt  convert_to_mat.m  download_ds.py  run_silvan.py
silvan/: main.cpp
silvan/include/: Graph.h  Probabilistic.h  Sp_sampler.h
silvan/src/: Graph.cpp
